@@ -1,3 +1,6 @@
+2014-04-15 Kilian Cavalotti <kilian@stanford.edu>
+	* Support hexadecimal indexes in model files (ticket #179)
+
 2014-03-11 Aurelien Degremont <aurelien.degremont@cea.fr>
 	* Release: 1.3.1
 
